force-app/main/default/objects/Funding_Disbursement_Batch__c/Funding_Disbursement_Batch__c.object-meta.xml
<CustomObject>
    <label>Funding Disbursement Batch</label>
    <nameField>
        <displayFormat>FDB-{0000000}</displayFormat>
        <label>Funding Disbursement Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Disbursements Batch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>