force-app/main/default/objects/Funding_Disbursement_Batch__c/fields/Finance_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Finance_Transaction_ID__c</fullName>
    <label>Finance Transaction ID</label>
    <type>TextArea</type>
</CustomField>