force-app/main/default/objects/Funding_Disbursement_Batch__c/fields/Funding_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Funding_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Opportunity</label>
    <referenceTo>FundingOpportunity</referenceTo>
    <relationshipLabel>Funding Disbursements Batch</relationshipLabel>
    <relationshipName>Funding_Disbursements_Batch</relationshipName>
    <type>Lookup</type>
</CustomField>