force-app/main/default/objects/Funding_Disbursement_Batch__c/fields/Reconciliation_Date__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Date__c</fullName>
    <label>Reconciliation Date</label>
    <type>Date</type>
</CustomField>