force-app/main/default/objects/Funding_Disbursement_Batch__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vendor CSV Sent</fullName>
            </value>
            <value>
                <fullName>Vendor Setup Completed</fullName>
            </value>
            <value>
                <fullName>Submitted For Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Payment Pending</fullName>
            </value>
            <value>
                <fullName>Payment Processed</fullName>
            </value>
            <value>
                <fullName>Reconciled</fullName>
            </value>
            <value>
                <fullName>Payment Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>